--- a/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
             </objects>
             <point key="canvasLocation" x="-145" y="-169"/>
         </scene>
-        <!--Add Edit Entry View-->
+        <!--Title-->
         <scene sceneID="M25-IO-7Vd">
             <objects>
                 <viewController id="hqu-2O-nSb" customClass="AddEditEntryView" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
@@ -95,6 +95,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="u2f-RO-27J"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="Frm-Sy-jzM"/>
                     <connections>
                         <outlet property="notesInput" destination="M2q-LJ-xxV" id="yYd-pK-Zrn"/>
                         <outlet property="titleInput" destination="CBF-0t-65s" id="dIa-zO-813"/>
