--- a/Journal-CoreData/Journal-CoreData/Base.lproj/Main.storyboard
+++ b/Journal-CoreData/Journal-CoreData/Base.lproj/Main.storyboard
@@ -86,6 +86,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="AYc-UR-Epy">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="ees-Lf-ax2" eventType="valueChanged" id="X3k-BE-3zN"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ldz-Zl-15I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
